# ERL_Stage_1_CMake

./: CMakeCache.txt  CMakeLists.txt  ERL_Stage_1_CMake  ERL_Stage_1_CMake.cpp  Makefile  README.md  cmake_install.cmake  jetson_nano_data.csv  jetson_nano_tegrastats_updated.csv  main.cpp
include/: AlgorithmConcrete.h  ConcreteComponentFactory.h  ConstraintsConcrete.h  DataConcrete.h  DefaultFactory.h  EnergySavingFactory.h  HighPerformanceFactory.h  HistoricalDataConcrete.h  IAlgorithm.h  IComponentFactory.h  IConstraints.h  IData.h  IHardwareProfiler.h  IHistoricalData.h  IOptimization.h  ISensorCapture.h  ISoC.h  ISystemCharacterization.h  ISystemManager.h  JetsonNanoHardwareProfiler.h  JetsonNanoInfo.h  JetsonNanoSensorCapture.h  OptimizationConcrete.h  SensorCaptureConcrete.h  SoCConcrete.h  SystemCharacterizationConcrete.h  SystemManagerConcrete.h  TegraStatsInfo.h  WindowsHardwareProfiler.h  WindowsSensorCapture.h
